fix safari "5" spacing issue

--- a/modules/5coolthings/css/main.css
+++ b/modules/5coolthings/css/main.css
@@ -256,6 +256,7 @@ sup {
 }
 .thin {
     font-family: 'Qualcomm-Light';
+		font-weight: 300;
 }
 .center {
     text-align: center;
@@ -341,7 +342,7 @@ sup {
 			overflow: hidden;
 		}
 		h1 { 
-			font-size: 22px;
+			font-size: 23px;
 			font-weight: normal;
 			line-height: 150%;
 			letter-spacing: 0;
@@ -349,10 +350,11 @@ sup {
 			width: 100%;
 			margin: 0 auto;
 		}
-		h1 strong.big5 {
+		h1 strong {
 			font-family: "Qualcomm-Semibold";
 			font-weight: normal;
 			font-size: 140px;
+			line-height: 140px;
 			display: inline-block;
 			margin-right: 15px;
 			position: relative;
@@ -410,8 +412,9 @@ sup {
 		font-size: 35px;
 		line-height: 43px;
 	}
-	h1 strong.big5 {
+	h1 strong {
 		font-size: 190px;
+		line-height: 190px;
 		margin-right: 20px;
 	}
 	.header-graphic {
@@ -434,8 +437,9 @@ sup {
 		padding-top: 178px;
 		margin: 0 0 0 88px;
 	}
-	h1 strong.big5 {
+	h1 strong {
 		font-size: 200px;
+		line-height: 200px;
 		margin-right: 30px;
 	}
 	.header-graphic {		
